# GoIT-WEB-module2

./: Dockerfile  pyproject.toml  setup.py
bot_helper/: address.py  address_book.py  birthday.py  bot.py  bot_base.py  email_address.py  field.py  name.py  phone.py  record.py
bot_helper/save_data/: save_base.py  save_on_disk.py
bot_helper/utils/: Bot UML-Nataliia Tiutiunnyk.drawio.html  command_prompts.py  format_str.py
