[tool.poetry]
name = "goit-web-module2"
version = "0.1.0"
description = ""
authors = ["nataliia.tiutiunnyk@imubit.com <nataliia.tiutiunnyk@imubit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
