[tool.poetry]
name = "goit-web-module2"
version = "0.1.0"
description = ""
authors = ["nataliia.tiutiunnyk@imubit.com <nataliia.tiutiunnyk@imubit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
prompt-toolkit = "3.0"
pandantic = "0.2.1"
transliterate = "1.10.2"
tabulate = "0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
